# material-code-icons

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: example.rs
src/: file_icons.json  folder_icons.json  language_icons.json  lib.rs
