[package]
name = "material-code-icons"
version = "0.1.0"
edition = "2021"
authors = ["Seth Bywater <seth@sethbywater.com>"]
license = "Apache-2.0"
description = "VS Code Material Icon Theme in Rust"
documentation = "https://docs.rs/material_code_icons"
repository = "https://github.com/sethbywater/material-code-icons"
readme = "README.md"
keywords = ["gui", "icon", "icons", "material", "material-icons"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
glob = "0.3.0"
serde_json = "1.0.91"
serde = "1.0.151"